Desktop Adventure Mode: skip mode selector, battle UI, and error handling
- Skip Classic/Adventure mode selector when launched from desktop
  (FORGE_DESKTOP_ADVENTURE flag), go straight to adventure
- Preload adventure resources when desktop adventure mode is active
- Add render() override in DuelScene to display "Waiting for desktop
  to resolve battle..." overlay during IPC battles
- Improve AdventureDesktopLauncher: working directory fix, JVM
  --add-opens args, Maven-generated classpath, version-agnostic
  dependency resolution, re-enable Start button on exit
- Simplify VSubmenuAdventure: use FButton instead of StartButton,
  update description text
- Add safety net in ExceptionHandler to print original exception
  when BugReporter fails
- Add safe localization fallbacks in BugReporter static initializers
- Add dependency:build-classpath plugin to forge-gui-mobile-dev
- Debug logging in DuelScene IPC polling for battle completion

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>